@@ -502,7 +502,7 @@ options:
         comment: |-
             This variable holds a comma-separated list of extensions. All files
             with any of these extensions are allowed and not checked.
-        default: '"jpg,cue,m3u,txt,vob,png,m2ts,ts"'
+        default: '"jpg,jpeg,cue,m3u,txt,vob,png,m2ts,ts"'
 
     ignored_types:
         type: string
@@ -936,7 +936,7 @@ options:
         comment: |-
             Another way to restrict audio-releases is by year. Define here a list
             of years allowed on site. The list should be comma-separated.
-        default: '"2007,2008,2009,2010,2011,2012"'
+        default: '"2010,2011,2012,2013,2014,2015"'
 
     audio_year_check:
         type: boolean
